--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "web-archive",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "An utility that uses archive.is / archive.today to archive a webpage from a given url.",
   "main": "index.js",
   "license": "ISC",
   "author": "https://github.com/Mad-Chemist",
-  "devDependencies": {
+  "dependencies": {
     "phantom": "^4.0.12"
   }
 }
