--- a/package.json
+++ b/package.json
@@ -1,11 +1,22 @@
 {
   "name": "web-archive",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "An utility that uses archive.is / archive.today to archive a webpage from a given url.",
   "main": "index.js",
   "license": "ISC",
   "author": "https://github.com/Mad-Chemist",
   "dependencies": {
     "phantom": "^4.0.12"
-  }
+  },
+  "keywords": [
+  	"archive.is",
+  	"wayback",
+  	"web-archiving",
+  	"archive",
+  	"archival",
+  	"promise",
+  	"archiver",
+  	"web archiver",
+  	"archive website"
+  ]
 }
